--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,11 @@
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": false,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "sourceMap": true,
+    "strictPropertyInitialization": false,
     "declaration": false,
     "experimentalDecorators": true,
     "moduleResolution": "node",
@@ -18,10 +21,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
